add format endpoint
